# libomron

./: .gitignore  .gitmodules  AUTHORS.txt  BuildSysCMakeLib.cmake  CMakeLists.txt  ChangeLog.txt  LICENSE.txt  README.asciidoc  README.bv  README.markdown  README.txt  _config.yml  atom.xml  documentation.html  index.html  index.markdown  index.textile
_includes/: about.html
blog/_posts/: 2009-05-31-new-project-website.textile  2009-06-06-usb-logs-in-repository.textile  2009-07-04-library-updates.markdown  2010-03-20-alive-again-sorta.markdown  2010-04-10-closer-to-done.markdown  2010-04-14-investing-money.markdown  2011-01-08-libomron-version-0.9-released.markdown
doc/: Doxyfile  omron_protocol_notes.asciidoc  omron_protocol_notes.txt
doc/logs/hem790it/: 1_1_07_OneReading.html  1_2_07_TwoReadings.html  790IT_Cleared.html  790IT_OneReading.html  790IT_TwoReadings.html  Omron790IT.html  Omron790IT.ulz  new2 BP Report 042109.csv  omron.mdb
doc/logs/hj720it/: pedometerData1.csv  pedometerData2.csv  pedometerData3.csv  pedometerLog1.xml  pedometerLog2.xml  pedometerLog3.xml  pedometerSniff1.usblog  pedometerSniff2.usblog  pedometerSniff3.usblog
examples/: CMakeLists.txt
examples/omron_720IT_test/: CMakeLists.txt  omron_720IT_csv_dump.c  omron_720IT_test.c
examples/omron_790IT_test/: CMakeLists.txt  omron_790IT_test.c
include/: omron.h
include/libomron/: omron.h
lib/udev/rules.d/: 69-libomron.rules
platform/osx/OmronNullDriver.kext/Contents/: Info.plist
platform/osx/homebrew/: libomron.rb
platform/osx/macports/devel/libomron/: Portfile
python/: CMakeLists.txt  __init__.py  device.py  gui.py  omron_790IT_test.py  plot.py  store.py
src/: CMakeLists.txt  omron.c  omron_libusb.c  omron_usbfs.c  omron_win32.c
swig/: CMakeLists.txt  Omron.cxx  Omron.h  omron.i
