SET(LIBS ${LIBOMRON_LIBRARY})

IF(WIN32)
  LIST(APPEND LIBS hid setupapi)
ELSEIF(UNIX)
  LIST(APPEND LIBS m)
ENDIF(WIN32)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/../libnputil/include/ ${CMAKE_SOURCE_DIR}/include)
LIST(APPEND LIBRARY_SRCS ${CMAKE_SOURCE_DIR}/../libnputil/src/nputil_libusb1.c)

INCLUDE_DIRECTORIES(${LIBOMRON_INCLUDE_DIRS})
LINK_DIRECTORIES(../../lib)

# ADD_SUBDIRECTORY(omron_790IT_test)
ADD_SUBDIRECTORY(omron_720IT_test)
