#SET(LIBS ${LIBOMRON_LIBRARY})

IF(WIN32)
  LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/lib)
  LIST(APPEND LIBS hid setupapi omron)
ELSEIF(UNIX)
  LIST(APPEND LIBS m)
ENDIF(WIN32)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${LIBOMRON_INCLUDE_DIRS})

# ADD_SUBDIRECTORY(omron_790IT_test)
ADD_SUBDIRECTORY(omron_720IT_test)
